--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,7 +2,7 @@
     Options -MultiViews
 
     RewriteEngine On
-    #RewriteBase /musicbox
+    #RewriteBase /margo
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
