--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
         "symfony/dom-crawler"   : "~2.3"
     },
     "autoload": {
-        "psr-0": {"MusicBox": "src/"}
+        "psr-0": {"Margo": "src/"}
     }
 }
