--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "symfony/translation": "~2.3",
         "symfony/twig-bridge": "~2.3",
         "symfony/validator": "~2.3",
+        "symfony/doctrine-bridge": "3.0.*",
+        "doctrine/common": "~2.4",
         "swiftmailer/swiftmailer": "~5.0"
     },
     "require-dev": {
